--- a/disjob-admin/ruoyi-admin/pom.xml
+++ b/disjob-admin/ruoyi-admin/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>ruoyi-disjob</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-logging</artifactId>
+    </dependency>
+
     <!-- SpringBoot集成thymeleaf模板 -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
