--- a/disjob-samples/pom.xml
+++ b/disjob-samples/pom.xml
@@ -22,7 +22,7 @@
   </modules>
 
   <properties>
-    <revision>2.0.1-SNAPSHOT</revision>
+    <revision>1.0.0-SNAPSHOT</revision>
     <disjob.version>2.0.1-SNAPSHOT</disjob.version>
 
     <file.encoding>UTF-8</file.encoding>
@@ -42,8 +42,6 @@
     <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
     <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
     <maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>
-    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-    <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -130,7 +128,7 @@
       <!--<plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>${maven-deploy-plugin.version}</version>
+        <version>2.8.2</version>
         <inherited>true</inherited>
         <executions>
           <execution>
@@ -145,7 +143,7 @@
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>${nexus-staging-maven-plugin.version}</version>
+        <version>1.6.13</version>
         <extensions>true</extensions>
         <executions>
           <execution>
