--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
   </modules>
 
   <properties>
-    <revision>2.0.1-SNAPSHOT</revision>
+    <revision>2.0.1</revision>
 
     <file.encoding>UTF-8</file.encoding>
     <java.version>1.8</java.version>
