--- a/disjob-admin/ruoyi-admin/pom.xml
+++ b/disjob-admin/ruoyi-admin/pom.xml
@@ -56,7 +56,7 @@
   </dependencies>
 
   <build>
-    <finalName>${project.artifactId}</finalName>
+    <finalName>${project.parent.artifactId}</finalName>
 
     <plugins>
       <plugin>
