--- a/disjob-samples/pom.xml
+++ b/disjob-samples/pom.xml
@@ -9,7 +9,7 @@
   <version>${revision}</version>
   <packaging>pom</packaging>
 
-  <name>Disjob Samples</name>
+  <name>${project.artifactId}</name>
   <url>https://github.com/ponfee/disjob</url>
   <description>Disjob范例</description>
 
