--- a/disjob-test/src/main/resources/mysql_conf_override/my.cnf
+++ b/disjob-test/src/main/resources/mysql_conf_override/my.cnf
@@ -1,2 +1,9 @@
 [mysqld]
 skip-grant-tables
+character-set-server=utf8mb4
+
+[mysql]
+default-character-set=utf8mb4
+
+[client]
+default-character-set=utf8mb4
