--- a/disjob-samples/disjob-samples-common/pom.xml
+++ b/disjob-samples/disjob-samples-common/pom.xml
@@ -50,7 +50,8 @@
     <!-- 解决启动报错：DnsServerAddressStreamProviders >>>> Unable to load io.netty.resolver.dns.macos.MacOSDnsServerAddressStreamProvider, fallback to system defaults. This may result in incorrect DNS resolutions on MacOS. Check whether you have a dependency on 'io.netty:netty-resolver-dns-native-macos'. Use DEBUG level to see the full stack: java.lang.UnsatisfiedLinkError: failed to load the required native library -->
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
+      <artifactId>netty-resolver-dns-native-macos</artifactId>
+      <classifier>osx-aarch_64</classifier>
     </dependency>
 
     <!-- Registry: select one implementation for server registry -->
