--- a/disjob-common/pom.xml
+++ b/disjob-common/pom.xml
@@ -87,6 +87,11 @@
       <version>${graphviz-java.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
