--- a/disjob-id/pom.xml
+++ b/disjob-id/pom.xml
@@ -43,6 +43,13 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <!-- Test -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
