--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
     <commons-collections4.version>4.4</commons-collections4.version>
     <commons-io.version>2.13.0</commons-io.version>
     <mybatis-spring-boot-starter.version>2.3.1</mybatis-spring-boot-starter.version>
+    <jna-platform.version>5.13.0</jna-platform.version>
     <curator-recipes.version>5.5.0</curator-recipes.version>
     <springdoc-openapi-ui.version>1.7.0</springdoc-openapi-ui.version>
     <mariaDB4j.version>2.5.3</mariaDB4j.version>
@@ -184,11 +185,6 @@
     <dependency>
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
