--- a/.editorconfig
+++ b/.editorconfig
@@ -4,14 +4,14 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 4
+indent_size = 2
 charset = utf-8
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{json,yml,yaml,xml}]
-indent_size = 2
+[*.{java,scala,kt,groovy}]
+indent_size = 4
 
 [*.md]
 trim_trailing_whitespace = false
