--- a/disjob-id/pom.xml
+++ b/disjob-id/pom.xml
@@ -14,7 +14,7 @@
   <artifactId>disjob-id</artifactId>
   <name>${project.artifactId}</name>
   <description>Distributed job id module</description>
-  <url>https://github.com/ponfee/disjob</url>
+  <url>https://github.com/dromara/disjob</url>
 
   <dependencies>
     <dependency>
