--- a/disjob-registry/disjob-registry-nacos/pom.xml
+++ b/disjob-registry/disjob-registry-nacos/pom.xml
@@ -14,7 +14,7 @@
   <artifactId>disjob-registry-nacos</artifactId>
   <name>${project.artifactId}</name>
   <description>Distributed job registry nacos module</description>
-  <url>https://github.com/ponfee/disjob</url>
+  <url>https://github.com/dromara/disjob</url>
 
   <dependencies>
     <dependency>
