--- a/disjob-registry/disjob-registry-redis/pom.xml
+++ b/disjob-registry/disjob-registry-redis/pom.xml
@@ -14,7 +14,7 @@
   <artifactId>disjob-registry-redis</artifactId>
   <name>${project.artifactId}</name>
   <description>Distributed job registry redis module</description>
-  <url>https://github.com/ponfee/disjob</url>
+  <url>https://github.com/dromara/disjob</url>
 
   <dependencies>
     <dependency>
