--- a/disjob-registry/pom.xml
+++ b/disjob-registry/pom.xml
@@ -15,7 +15,7 @@
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>Distributed job registry parent module</description>
-  <url>https://github.com/ponfee/disjob</url>
+  <url>https://github.com/dromara/disjob</url>
 
   <modules>
     <module>disjob-registry-api</module>
