--- a/disjob-samples/pom.xml
+++ b/disjob-samples/pom.xml
@@ -10,7 +10,7 @@
   <packaging>pom</packaging>
 
   <name>${project.artifactId}</name>
-  <url>https://github.com/ponfee/disjob</url>
+  <url>https://github.com/dromara/disjob</url>
   <description>Disjob范例</description>
 
   <modules>
