--- a/disjob-supervisor/pom.xml
+++ b/disjob-supervisor/pom.xml
@@ -14,7 +14,7 @@
   <artifactId>disjob-supervisor</artifactId>
   <name>${project.artifactId}</name>
   <description>Distributed job supervisor module</description>
-  <url>https://github.com/ponfee/disjob</url>
+  <url>https://github.com/dromara/disjob</url>
 
   <dependencies>
     <dependency>
