--- a/disjob-worker/pom.xml
+++ b/disjob-worker/pom.xml
@@ -14,7 +14,7 @@
   <artifactId>disjob-worker</artifactId>
   <name>${project.artifactId}</name>
   <description>Distributed job worker module</description>
-  <url>https://github.com/ponfee/disjob</url>
+  <url>https://github.com/dromara/disjob</url>
 
   <dependencies>
     <dependency>
