mv execution router module

--- a/disjob-dispatch/disjob-dispatch-api/pom.xml
+++ b/disjob-dispatch/disjob-dispatch-api/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>disjob-registry-api</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
