--- a/disjob-samples/disjob-samples-frameless-worker/src/main/resources/worker-conf.yml
+++ b/disjob-samples/disjob-samples-frameless-worker/src/main/resources/worker-conf.yml
@@ -15,6 +15,8 @@ disjob:
     maximum-pool-size: 100
     keep-alive-time-seconds: 300
     process-thread-pool-size: 6
+    worker-token: 358678bfe34648f68b607036a27c6854
+    supervisor-token: 20bb8b7f1cb94dc894b45546a7c2982f
   registry:
     # redis做注册中心时需要配置
     redis:
