--- a/disjob-samples/disjob-samples-springboot-common/src/main/resources/application-registry_database.yml
+++ b/disjob-samples/disjob-samples-springboot-common/src/main/resources/application-registry_database.yml
@@ -1,4 +1,4 @@
-# 当使用database作为注册中心时需要配置
+# 当使用database作为注册中心时使用该配置，同时需要在“application.yml”配置文件的“spring.profiles.include”项中增加“registry_database”，即“spring.profiles.include: xxx,registry_database”
 disjob.registry.database:
   namespace: mysql_namespace
   session-timeout-ms: 30000
