--- a/disjob-admin/ruoyi-disjob/src/main/resources/application-worker.yml
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/application-worker.yml
@@ -1,6 +1,6 @@
 # Disjob worker configuration
 disjob.worker:
-  group: default
+  group: app-test
   timing-wheel-tick-ms: 100
   timing-wheel-ring-size: 60
   maximum-pool-size: 100
