--- a/disjob-samples/disjob-samples-frameless-worker/src/main/resources/worker-conf.yml
+++ b/disjob-samples/disjob-samples-frameless-worker/src/main/resources/worker-conf.yml
@@ -9,7 +9,7 @@ disjob:
     max-count: 5
     backoff-period: 3000
   worker:
-    group: default
+    group: app-test
     timing-wheel-tick-ms: 100
     timing-wheel-ring-size: 60
     maximum-pool-size: 100
