--- a/disjob-samples/disjob-samples-frameless-worker/pom.xml
+++ b/disjob-samples/disjob-samples-frameless-worker/pom.xml
@@ -43,6 +43,11 @@
       <version>4.4.5</version>
     </dependency>
     <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-resolver-dns-native-macos</artifactId>
+      <classifier>osx-aarch_64</classifier>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <scope>provided</scope>
