tagsinput search user use typeahead

--- a/disjob-admin/ruoyi-disjob/pom.xml
+++ b/disjob-admin/ruoyi-disjob/pom.xml
@@ -30,6 +30,10 @@
       <groupId>cn.ponfee</groupId>
       <artifactId>ruoyi-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>ruoyi-system</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>cn.ponfee</groupId>
