--- a/disjob-admin/ruoyi-disjob/pom.xml
+++ b/disjob-admin/ruoyi-disjob/pom.xml
@@ -26,6 +26,12 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- 引入`disjob-test`模块中的一些内置`JobHandler`用于测试，实际开发中建议去除此依赖 -->
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-test</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>ruoyi-common</artifactId>
@@ -46,10 +52,6 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-worker</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>disjob-test</artifactId>
     </dependency>
 
     <!-- Registry: select one implementation for server registry -->
