--- a/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-redis.yml
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-redis.yml
@@ -28,5 +28,5 @@ spring.redis:
 
 # 使用redis做注册中心
 disjob.registry.redis:
-  namespace: redis_namespace
+  namespace: disjob_registry
   session-timeout-ms: 60000
