--- a/disjob-admin/ruoyi-admin/src/main/resources/application.yml
+++ b/disjob-admin/ruoyi-admin/src/main/resources/application.yml
@@ -26,10 +26,7 @@ server:
       min-spare: 100
 
 # 日志配置
-logging:
-  level:
-    com.ruoyi: debug
-    org.springframework: warn
+logging.config: classpath:log4j2.xml
 
 # 用户配置
 user:
