--- a/disjob-admin/ruoyi-framework/pom.xml
+++ b/disjob-admin/ruoyi-framework/pom.xml
@@ -40,8 +40,8 @@
       <artifactId>kaptcha</artifactId>
       <exclusions>
         <exclusion>
-          <artifactId>javax.servlet-api</artifactId>
           <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
