modify batch update sql mode, remove allowMultiQueries

--- a/disjob-samples/disjob-samples-springboot-common/src/main/resources/application-registry_database.yml
+++ b/disjob-samples/disjob-samples-springboot-common/src/main/resources/application-registry_database.yml
@@ -4,7 +4,7 @@ disjob.registry.database:
   session-timeout-ms: 30000
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://localhost:3306/disjob?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
+    jdbc-url: jdbc:mysql://localhost:3306/disjob?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
     username: disjob
     password: disjob$123456
     minimum-idle: 2
