--- a/disjob-samples/conf-supervisor/application-mysql.yml
+++ b/disjob-samples/conf-supervisor/application-mysql.yml
@@ -1,7 +1,7 @@
 # database configuration
 disjob.datasource:
   driver-class-name: com.mysql.cj.jdbc.Driver
-  jdbc-url: jdbc:mysql://localhost:3306/disjob?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
+  jdbc-url: jdbc:mysql://localhost:3306/disjob?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
   username: disjob
   password: disjob$123456
   minimum-idle: 2
